// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transaction status pill should render the allow pill correctly 1`] = `
.emotion-0 {
  color: var(--wp-components-color-foreground, #1e1e1e);
  line-height: 1.4;
  margin: 0;
  text-wrap: balance;
  text-wrap: pretty;
  font-size: calc((12 / 13) * 13px);
  font-weight: normal;
  line-height: 16px;
}

<div>
  <span
    class="components-truncate components-text woocommerce-pill wcpay-pill__success emotion-0 emotion-1"
    data-wp-c16t="true"
    data-wp-component="Text"
  >
    Succeeded
  </span>
</div>
`;

exports[`Transaction status pill should render the block pill correctly 1`] = `
.emotion-0 {
  color: var(--wp-components-color-foreground, #1e1e1e);
  line-height: 1.4;
  margin: 0;
  text-wrap: balance;
  text-wrap: pretty;
  font-size: calc((12 / 13) * 13px);
  font-weight: normal;
  line-height: 16px;
}

<div>
  <span
    class="components-truncate components-text woocommerce-pill wcpay-pill__danger emotion-0 emotion-1"
    data-wp-c16t="true"
    data-wp-component="Text"
  >
    Payment blocked
  </span>
</div>
`;

exports[`Transaction status pill should render the review pill correctly 1`] = `
.emotion-0 {
  color: var(--wp-components-color-foreground, #1e1e1e);
  line-height: 1.4;
  margin: 0;
  text-wrap: balance;
  text-wrap: pretty;
  font-size: calc((12 / 13) * 13px);
  font-weight: normal;
  line-height: 16px;
}

<div>
  <span
    class="components-truncate components-text woocommerce-pill wcpay-pill__alert emotion-0 emotion-1"
    data-wp-c16t="true"
    data-wp-component="Text"
  >
    Needs review
  </span>
</div>
`;

exports[`Transaction status pill should render the unknown pill correctly 1`] = `
.emotion-0 {
  color: var(--wp-components-color-foreground, #1e1e1e);
  line-height: 1.4;
  margin: 0;
  text-wrap: balance;
  text-wrap: pretty;
  font-size: calc((12 / 13) * 13px);
  font-weight: normal;
  line-height: 16px;
}

<div>
  <span
    class="components-truncate components-text woocommerce-pill wcpay-pill__light emotion-0 emotion-1"
    data-wp-c16t="true"
    data-wp-component="Text"
  >
    Unknown
  </span>
</div>
`;
